# ffmpeg_ws

./: .gitignore  1.py  BUILD_FIX.md  BUILD_IMPROVEMENT.md  GITHUB_ACTIONS_GUIDE.md  PACKAGING_SOLUTION.md  README.md  UV_BUILD_SOLUTION.md  code_segment.py  div_video_9.py  div_video_puis.py  main.py  merged_video_gui.py  pyproject.toml  requirements.txt  temp.txt
.github/workflows/: build-uv.yml  build.yml  test-build.yml
Luts/: 1.cube  U-ALEXA-LOG-C-V4-LTR.cube
stt/: 1.py  2.py  README.md  stt_vosk.py  stt_whisper.py  transcript2.txt
stt/output/: 1.whisper.srt  1.whisper.txt  2.whisper.srt  2.whisper.txt  video.whisper.srt  video.whisper.txt
toolkits/: 1.py  2.py  VideoToAudio.py  extract_frames.py  merge_video_puls.py  xhs_downloader.py
video_clips/: PYINSTALLER_REALITY.md  README.md  build_uv_env.sh  build_with_uv.sh  font_test.py  main.py  main_qt5.py  requirements.txt  run.py  run_gui.py  run_psg_qt.py  run_psg_qt_fixed.py  run_pure_qt5.py  run_qt5_app.py  run_qt_fixed.sh
video_clips/config/: settings.py
video_clips/gui/: __init__.py
video_clips/gui/widgets/: __init__.py
video_clips/modules/: __init__.py  audio_extractor.py  audio_mixer.py  duration_composer.py  frame_extractor.py  grid_composer.py  sliding_strip_composer.py  stt_transcriber.py  video_splitter.py
video_clips/utils/: __init__.py  file_handler.py  video_utils.py
代码/: 11.py  22.py  33.py  help.py  util.py  xhs.py  ╝α┐╪╕ⁿ╨┬▓ó╧┬╘╪.py  ╧┬╘╪─│▓⌐╓≈╦∙╙╨╩╙╞╡.py  ╧┬╘╪╡Ñ╕÷╩╙╞╡.py
